Obtain centered and normalized csv

--- a/src/training_YOLO.ipynb
+++ b/src/training_YOLO.ipynb
@@ -3568,7 +3568,7 @@
       ],
       "source": [
         "# Configurar y ejecutar el entrenamiento con checkpoints\n",
-        "results = model.train(data=\"yolo_webcam_centered/muones.yaml\",\n",
+        "results = model.train(data=\"yolo/muones.yaml\",\n",
         "                      epochs=120,\n",
         "                      project='checkpoints',  # Directorio donde se guardarán los checkpoints\n",
         "                      name='muon_experiment',  # Nombre del experimento\n",
